1999-07-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/module_interface.c:
	* fvwm/events.c (HandleVisibilityNotify):
	(HandleButtonPress):

	* fvwm/builtins.c (CreateConditionMask):
	* fvwm/fvwm.h:
	* fvwm/window_flags.h:
	rewrote VISIBLE flag and added RAISED flag again. Now they do what they
	sound like (close enhancement request #21)

	* fvwm/stack.c (CanBeRaised):
	(raiselower_func):
	* fvwm/events.c (HandleButtonPress): removed function CanBeRaised to
	improve raising of windows with transients.

	* fvwm/stack.c (RaiseWindow): improved raising of windows with
	transients
	(CanBeRaised): always raise windows with transients and the
	RaiseTransient style

1999-06-30  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/fvwm.c (SetRCDefaults):
	* fvwm/ConfigFvwmDefaults: moved style default to ConfigFvwmDefaults

	* fvwm/stack.c (new_layer):
	(RaiseWindow):
	* fvwm/fvwm.h (style_flags):
	* fvwm/style.c (ProcessNewStyle): new styles RaiseTransient (default)
	and DontRaiseTransient, avoids problem described in bug #290

	* fvwm/move_resize.c (resize_window): use RESIZE cursor, implemented
	'c' size unit (client defined steps)

	* fvwm/functions.c (execute_complex_function):
	* fvwm/functions.h (cfunc_action_type): implemented 'H'old trigger for
	complex functions

	* fvwm/move_resize.c (ConstrainSize):
	* fvwm/add_window.c (GetWindowSizeHints): handle MaxWindowSize in
	ConstrainSize. Use the border width to calculate the actual size.

1999-06-29  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/Module.c (InitGetConfigLine): use alloca instead of safemalloc

	* fvwm/misc.c (HandleHardFocus): disabled HandleHardFocus to see if
	this causes any problems.

1999-06-28  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/events.c (HandleUnmapNotify): removed some copy-and-past code
	trash

1999-06-27  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/builtins.c (WindowShade): update the border when shading a
	window

	* fvwm/move_resize.c (resize_window): fixed resizing of shaded windows