@@ -1,3 +1,7 @@
+1999-07-01  Paul D. Smith  <psmith@gnu.org>
+
+	* FvwmGtk/menu.c (menu_submenu): Remove unused variable.
+
 1999-06-29  Dan Espen  <dane@mk.telcordia.com>
 
 	* FvwmForm/FvwmForm.c (DoCommand): Remove one second delay on the
